<resources>
    <string name="app_name" translatable="false">Musekit</string>

    <!-- Bottom navigation bar labels -->
    <string name="tuning">Tuning</string>
    <string name="metronome">Metronome</string>
    <string name="settings">Settings</string>

    <!-- Note fork strings -->
    <string name="note">Note</string>
    <string name="note_placeholder" translatable="false">%1$s%2$d</string>
    <string name="pitch">Pitch</string>
    <string name="pitch_placeholder" translatable="false">%1$dHz</string>
    <string name="note_fork_automatic">Automatic</string>
    <string name="note_fork_manual">Manual</string>
    <string name="record_permission_not_granted">Microphone access was not granted</string>
    <string name="play_sound_to_tune">Play to start tuning</string>
    <string name="open_settings">Open settings</string>
    <string name="contentDescription_tuner_check">Note in tune checkmark</string>

    <!-- Shared strings -->
    <string name="contentDescription_increase">Increase</string>
    <string name="contentDescription_decrease">Decrease</string>
    <string name="contentDescription_start">Start</string>
    <string name="contentDescription_stop">Stop</string>

    <!-- Note fork presets -->
    <string name="presets">Presets</string>
    <string name="default_preset">Default</string>
    <string name="save_preset">Save preset</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="preset_name">Preset name (required)</string>
    <string name="delete_preset">Delete preset</string>
    <string name="warning_preset_deletion">The preset \"%1$s\" will be permanently deleted.</string>
    <string name="delete">Delete</string>
    <string name="contentDescription_trash_can">Trash can</string>
    <string name="contentDescription_save">Save</string>

    <!-- Metronome strings -->
    <string name="sound">Sound</string>
    <string name="set_tempo">Set</string>
    <string name="tap_tempo">Tap</string>
    <string name="tempo">Tempo</string>
    <string name="tempo_hint" translatable="false">60</string>
    <string name="beats">Beats</string>"
    <string name="contentDescription_pen">Pen</string>
    <string name="contentDescription_finger_tapping">Finger tapping</string>

    <!-- Worklog -->
    <string name="practice_history">Practice history</string>
    <string name="contentDescription_hourglass">Hourglass (%1$s)</string>
    <string name="contentDescription_back_arrow">Back arrow</string>
    <string name="contentDescription_practice_history">History</string>
    
    <!-- Metronome sound names -->
    <string name="metronome_sound_default">Default</string>
    <string name="metronome_sound_beep">Beep</string>
    <string name="metronome_sound_ding">Ding</string>
    <string name="metronome_sound_wood">Wood</string>
    <string name="metronome_sound_none">(none)</string>

    <!-- Settings strings -->
    <string name="about">About</string>
    <string name="contentDescription_app_icon">App icon</string>
    <string name="notation_style">Notation style</string>
    <string name="notation_style_subtitle">Choose how notes are named</string>
    <string name="notation_style_english">English</string>
    <string name="notation_style_german">German</string>
    <string name="notation_style_fixed_do">Fixed Do</string>
    <string name="source_code">Source code</string>
    <string name="source_code_subtitle">Report issues and request features</string>
    <string name="developer">Developer account</string>
    <string name="developer_subtitle">Find me on Mastodon</string>"
    <string name="developer_website">Developer website</string>
    <string name="developer_website_subtitle">Take a look at my other projects</string>
    <string name="licenses">Licenses</string>
    <string name="licenses_subtitle">Pitch recognition, icons and others</string>
    <string name="version">Version %1$s</string>
    <string name="close">Close</string>
    <string name="contentDescription_github_logo">Github logo</string>
    <string name="contentDescription_mastodon_logo">Mastodon logo</string>
    <string name="contentDescription_internet_website">Website</string>
    <string name="contentDescription_localization">Localization</string>
    <string name="contentDescription_file_icon">File</string>
    <string name="contentDescription_moon_icon">Moon</string>
    <string name="contentDescription_current_theme_symbol">Current theme</string>

    <!-- Review popup -->
    <string name="review_popup_title">Like the app?</string>
    <string name="review_popup_content">I would love to hear your opinion!</string>
    <string name="review_now">Review</string>
    <string name="review_later">Later</string>
    <string name="contentDescription_review_never">Don\'t show again</string>

    <!-- Night mode dialog -->
    <string name="theme">Theme</string>
    <string name="theme_subtitle">Choose the app style</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_auto">System</string>
    <string name="accent_colour">Accent colour</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="contentDescription_check_icon">A check mark</string>

    <!-- Error string -->
    <string name="whoopsie">Whoopsie, you shouldn\'t be here!</string>
    <string name="close_app">Close app</string>
    <string name="contentDescription_ghost_icon">Ghost icon</string>

    <!-- Licenses dialog -->
    <string name="this_app">This app</string>
    <string name="gpl_3_0" translatable="false">GPLv3.0</string>
    <string name="icons">Material Icons (Google)</string>
    <string name="apache">Apache 2.0 License</string>
    <string name="tarsos">TarsosDSP</string>
    <string name="contentDescription_right_arrow">Right arrow</string>
    <string name="special_thanks">Special thanks to TarsosDSP for building the pitch recognition library.</string>

</resources>