<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_margin="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/contentDescription_app_icon"
                app:tint="?android:attr/textColorPrimary"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageAppIcon"/>

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Placeholder: 1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appName"
            tools:ignore="HardcodedText" />

        <com.kwasow.musekit.views.MenuSection
            android:id="@+id/menuSectionSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sectionTitle="@string/settings"
            app:layout_constraintTop_toBottomOf="@id/appVersion">

            <com.kwasow.musekit.views.MenuItem
                android:id="@+id/itemThemeSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/theme"
                app:itemSubtitle="@string/theme_subtitle"
                app:leadingIcon="@drawable/ic_moon"
                app:leadingIconContentDescription="@string/contentDescription_moon_icon"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.kwasow.musekit.views.MenuItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/notation_style"
                app:itemSubtitle="@string/notation_style_subtitle"
                app:leadingIcon="@drawable/ic_globe"
                app:leadingIconContentDescription="@string/contentDescription_localization"/>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/notationStylePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingHorizontal="12dp"
                android:paddingBottom="12dp"
                app:singleSelection="true"
                app:selectionRequired="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonNotationStyleEnglish"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notation_style_english"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonNotationStyleGerman"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notation_style_german"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonNotationStyleFixedDo"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notation_style_fixed_do"/>

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </com.kwasow.musekit.views.MenuSection>

        <com.kwasow.musekit.views.MenuSection
            android:id="@+id/menuSectionAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sectionTitle="@string/about"
            app:layout_constraintTop_toBottomOf="@id/menuSectionSettings">

            <com.kwasow.musekit.views.MenuItem
                android:id="@+id/itemSourceCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/source_code"
                app:itemSubtitle="@string/source_code_subtitle"
                app:leadingIcon="@drawable/ic_github"
                app:leadingIconContentDescription="@string/contentDescription_github_logo"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.kwasow.musekit.views.MenuItem
                android:id="@+id/itemMastodon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/developer"
                app:itemSubtitle="@string/developer_subtitle"
                app:leadingIcon="@drawable/ic_mastodon"
                app:leadingIconContentDescription="@string/contentDescription_mastodon_logo"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.kwasow.musekit.views.MenuItem
                android:id="@+id/itemWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/developer_website"
                app:itemSubtitle="@string/developer_website_subtitle"
                app:leadingIcon="@drawable/ic_web"
                app:leadingIconContentDescription="@string/contentDescription_internet_website"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.kwasow.musekit.views.MenuItem
                android:id="@+id/itemLicenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemTitle="@string/licenses"
                app:itemSubtitle="@string/licenses_subtitle"
                app:leadingIcon="@drawable/ic_file"
                app:leadingIconContentDescription="@string/contentDescription_file_icon"
                android:clickable="true"
                android:focusable="true"/>

        </com.kwasow.musekit.views.MenuSection>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special_thanks"
            android:textStyle="italic"
            android:textSize="12sp"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:paddingHorizontal="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menuSectionAbout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>